ajout titre et css

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 </head>
 <link rel="stylesheet" type="text/css" href="css/style.css">
 <body>
-	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus quos quidem deleniti quisquam similique iusto officiis commodi maxime, alias numquam dolor officia labore qui eius ullam atque natus? Qui, suscipit.</p>
+	<h1>Jeu Nombre Mystère</h1>
+	<div></div>
 	
 </body>
 <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
