--- a/index.html
+++ b/index.html
@@ -7,7 +7,12 @@
 <link rel="stylesheet" type="text/css" href="css/style.css">
 <body>
 	<h1>Jeu Nombre Mystère</h1>
-	<div></div>
+	<p>Devinez le nombre mystère</p>
+	<p>Vous avez 3 tentatives</p>
+	<p>GO!!!!!</p>
+	<div id="jeu">
+		
+	</div>
 	
 </body>
 <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
